--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <modules>
         <module>01jvm</module>
+        <module>02jvm_2</module>
     </modules>
     <name>java-course-code</name>
     <description>Demo project for Spring Boot</description>
