--- a/02jvm_2/pom.xml
+++ b/02jvm_2/pom.xml
@@ -11,5 +11,18 @@
 
     <artifactId>02jvm_2</artifactId>
 
+    <dependencies>
 
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.58.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.9.2</version>
+        </dependency>
+    </dependencies>
 </project>
