--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>01jvm</module>
         <module>02jvm_2</module>
         <module>03nio</module>
+        <module>04concurrency</module>
     </modules>
     <name>java-course-code</name>
     <description>Demo project for Spring Boot</description>
