add 简易设计电商场景下 用户、商品、订单表 ddl语句

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>02jvm_2</module>
         <module>03nio</module>
         <module>04concurrency</module>
+        <module>06mysql</module>
     </modules>
     <name>java-course-code</name>
     <description>Demo project for Spring Boot</description>
